<resources>
    <string name="app_name">mynewone</string>
    <string name="ask_your_question">enter question</string>
    <string name="name">Name</string>
    <string name="name1">Name</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="answer2">answer2</string>
    <string name="show">SHOW</string>
    <string name="add_answers">ADD ANSWERS</string>

</resources>